# taru

./: .gitattributes  .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix
public/: fitAddon.js  index.html  index.js  style.css
src/: app_state.rs  auth.rs  broadcast.rs  cfg.rs  event.rs  main.rs  task.rs
