[package]
name = "taru"
version = "0.1.0"
authors = ["Mewp <git@mewp.pl>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-session = "0.3.0"
actix-service = "1.0"
actix-files = "0.2"
listenfd = "0.3"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1"
tokio = { version = "0.2", features = ["sync", "process", "io-util", "io-driver"] }
futures = "0.3"
bytes = "0.5.5"
anyhow = "1"
thiserror = "1"
mio = { version = "0.7", features = ["os-poll", "os-util"] }
os_pipe = "0.9"
parking_lot = "0.11"
oauth2 = { version = "3.0", features = ["futures-03", "reqwest-010"], default-features = false }
reqwest = "0.10"

[profile.release]
#lto = true
